# fgdb

./: .gitignore  Cargo.toml  README.md  fgdb.toml  rustfmt.toml
doc/: dev_notes.txt  todo.txt
src/: lib.rs
src/concurrency/: env_pool.rs  mod.rs
src/config/: fgdb_config.rs  mod.rs
src/db/: conn.rs  database.rs  mod.rs  tx.rs
src/db/rows/: action_sets_row.rs  armor_types_row.rs  async_prices_row.rs  base_type_items_row.rs  base_types_row.rs  classes.rs  colors.rs  crafting_categories_row.rs  exchange_prices_row.rs  licenses.rs  mod.rs  sounds_row.rs
src/db/tables/: action_sets.rs  action_sets_table.rs  armor_types.rs  armor_types_table.rs  async_prices.rs  async_prices_table.rs  base_type_items.rs  base_type_items_table.rs  base_types.rs  base_types_table.rs  classes.rs  classes_table.rs  colors.rs  colors_table.rs  crafting_categories.rs  crafting_categories_table.rs  exchange_prices.rs  licenses.rs  mod.rs  (+7 more)
src/fs/: dir.rs  mod.rs  paths.rs
src/init/: initializer.rs  mod.rs
src/net/: mod.rs
src/repo/: local_repository.rs  mod.rs  remote_repository.rs  repository.rs
src/repository/: local_repository.rs  mod.rs  remote_repository.rs  repository.rs
src/types/: armor_type.rs  color_basis.rs  data_source.rs  font_size.rs  game_variant.rs  gem_level.rs  icon.rs  icon_shape.rs  icon_size.rs  item_level.rs  liquidity.rs  mod.rs  non_unique_rarity.rs  price.rs  rarity.rs  repository.rs  sound.rs  sound_volume.rs  stack_size.rs  stock_color.rs  stock_sound.rs
src/update/: manager.rs  mod.rs  policy.rs  updater.rs
src/util/: consts.rs  env.rs  error.rs  errors.rs  mod.rs
(+20 files in other folders)
