[package]
name = "fgen"
version = "0.1.0"
edition = "2024"

[features]
# Convenience feature to skip work-in-progress code
skip = []

[dependencies]
anyhow = "1.0.100"
const_format = "0.2.35"
fern = "0.7.1"
filenamify = "0.1.2"
hankinsohl_utils = { git = "https://github.com/hankinsohl/hankinsohl_utils.git" }
itertools = "0.14.0"
paste = "1.0.15"
rand = "0.9.2"
reqwest = "0.13.2"
rgb = { version = "0.8.52", features = ["serde"] }
rusqlite = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-json-fmt = "0.1.0"
serde_json = "1.0.149"
static_init = "1.0.4"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
toml = "0.9.11"
url = { version = "2.5.8", features = ["serde"] }







