[package]
name = "fgdb"
version = "0.0.1-alpha.0"
edition = "2024"

[features]
default = ["std", "errors", "names", "rows", "types"]
no_db = ["errors", "names", "rows", "types"]
std = []
errors = []
names = []
rows = []
types = []

[dependencies]
anyhow = "1.0.100"
const_format = "0.2.35"
itertools = "0.14.0"
paste = "1.0.15"
rand = "0.9.2"
rgb = { version = "0.8.52", features = ["serde"] }
rusqlite = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-json-fmt = "0.1.0"
serde_json = "1.0.149"
slitu = { git = "https://github.com/hankinsohl/slitu.git" }
static_init = "1.0.4"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
toml = "0.9.11"
url = { version = "2.5.8", features = ["serde"] }







